Fix overflow in row element
- MODIFIED: remove `container` selector

--- a/scss/vendor-extensions/bootstrap-3.scss
+++ b/scss/vendor-extensions/bootstrap-3.scss
@@ -29,10 +29,6 @@ p:last-child {
 .container {
   width: 100%;
   max-width: 1600px;
-  .container {
-    padding-left: 0;
-    padding-right: 0;
-  }
 }
 
 // This will all users to create multiple full width backgrounds per container
